--- a/index.html
+++ b/index.html
@@ -9,23 +9,10 @@
 </head>
 <body>
     <div id="my_dataviz"></div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
+    <p>end</p>
+    <script src="js/readfile.js"></script>
     <script src="https://d3js.org/d3.v6.js"></script>
     <script src="js/main.js"></script>
-    <!-- <script src="js/readfile.js"></script> -->
 </body>
 </html>
