--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <div id="my_dataviz"></div>
 
     <p>end</p>
-    <script src="js/readfile.js"></script>
     <script src="https://d3js.org/d3.v6.js"></script>
+    
     <script src="js/main.js"></script>
+    <!-- <script src="js/readfile.js"></script>     -->
 </body>
 </html>
